--- a/GameLibrary/appsettings.json
+++ b/GameLibrary/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GameLibrary-71e735f4-df22-4751-a1f1-73bb74dc8b00;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=gamelibrary.db;Port=5432;Database=gamelibrary;Username=postgres;Password=postgres;Include Error Detail=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
