--- a/GameLibrary/appsettings.json
+++ b/GameLibrary/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=gamelibrary.db;Port=5432;Database=gamelibrary;Username=postgres;Password=postgres;Include Error Detail=true"
+        "DefaultConnection": "Data Source=Database.db"
     },
     "Logging": {
         "LogLevel": {
