--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,5 @@ services:
       - "8080:8080"
       - "8081:8081"
     volumes:
-      - gamelibrary_usersecrets:/home/app/.microsoft/usersecrets:ro
-      - gamelibrary_https:/home/app/.aspnet/https:ro
-
-volumes:
-  gamelibrary_usersecrets:
-  gamelibrary_https:
+      - "${SECRETS_PATH}/usersecrets:/home/app/.microsoft/usersecrets:ro"
+      - "${HTTPS_PATH}/https:/home/app/.aspnet/https:ro"
