--- a/GameLibrary/appsettings.json
+++ b/GameLibrary/appsettings.json
@@ -26,5 +26,9 @@
             "DefaultLockoutTimeSpan": "00:05:00"
         }
     },
-
+    "Authorization": {
+        "Policies": {
+            "ElevatedRights": [ "Administrator" ]
+        }
+    }
 }
