--- a/GameLibrary/appsettings.json
+++ b/GameLibrary/appsettings.json
@@ -8,22 +8,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "Identity": {
-        "SignIn": {
-            "RequireConfirmedAccount": true
-        },
-        "Password": {
-            "RequireDigit": true,
-            "RequireLowercase": true,
-            "RequireNonAlphanumeric": false,
-            "RequireUppercase": true,
-            "RequiredLength": 6
-        },
-        "Lockout": {
-            "AllowedForNewUsers": true,
-            "MaxFailedAccessAttempts": 5,
-            "DefaultLockoutTimeSpan": "00:05:00"
-        }
-    }
+    "AllowedHosts": "*"
 }
