--- a/GameLibrary/GameLibrary.csproj
+++ b/GameLibrary/GameLibrary.csproj
@@ -17,4 +17,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
